<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Desafio">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDesafio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Voltar"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_voltar"
        android:background="@color/red"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/desafio"
        android:textSize="22sp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/campoCigas"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:hint="@string/hintCigas" />

    <EditText
        android:id="@+id/campoTempo"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:hint="@string/hintAnos" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/red"
        android:textStyle="bold"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/resultadoFumante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:text=""
        android:textSize="18sp"
        android:layout_gravity="center" />


</LinearLayout>
