<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:outlineProvider="none"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#50000000"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnProjetos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:paddingHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/btnProjetos"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnDesafio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="30dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/btnDesafio" />


</LinearLayout>